rewrote css from scratch

--- a/index.html
+++ b/index.html
@@ -3,32 +3,30 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Windows NT 4.0 and Windows 95 Key Generator</title>
-        <link rel="stylesheet" href="style.css">
-        <link type="text/css" rel="stylesheet" href="css/w95.css">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Windows NT 4.0 / 95 Keygen</title>
     </head>
 
     <body>
-        <section>
-            <div class="center">
-                <div class="container">
-                    <div class="card card-tertiary">
-                        <div class="card-header no-select">
-                            <span class="icon icon-xs w95-folder"></span>
-                            <span>Generate a Windows NT 4.0 or Windows 95 Key!</span>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">Key: <span id="keyOutput">-</span></p>
-                            <div>
-                                <button class="no-select btn btn-sm btn-primary" type="button" id="normalKeyButton"><span class="btn-text">Normal</span></button>
-                                <button class="no-select btn btn-sm btn-primary" type="button" id="oemKeyButton"><span class="btn-text">OEM</span></button>
-                            </div>
-                        </div>
+        <div class="center">
+            <div class="container">
+                <div class="card">
+                    <div class="card-title no-select">
+                        Generate a Windows NT 4.0 or Windows 95 Key!
+                    </div>
+                    <div class="card-content">
+                        <span class="no-select">Key: </span><span id="keyOutput"> - </span>
+                    </div>
+                    <div class="card-footer no-select">
+                        <button class="btn" id="normalKeyButton"> <span class="btn-text">Normal</span> </button>
+                        <button class="btn" id="oemKeyButton"> <span class="btn-text">OEM</span> </button>
+                        <a target="_blank" href="https://github.com/nilaerdna/windows95keygen"><button class="btn" id="githubButton"> <span class="btn-text">GitHub</span> </button></a>
                     </div>
                 </div>
             </div>
-        </section>
-
+        </div>
         <script defer src="js/jquery.min.js"></script>
         <script defer src="js/generator.js"></script>
         <script defer src="js/controls.js"></script>
