--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,7 @@
                 </div>
             </div>
         </div>
-        <script defer src="js/jquery.min.js"></script>
-        <script defer src="js/generator.js"></script>
-        <script defer src="js/controls.js"></script>
+        <script defer src="js/script.js"></script>
     </body>
 
 </html>
